JBA - Minesweeper - Stage 1/5: Lay the groundwork

--- a/Lay the groundwork/task-info.yaml
+++ b/Lay the groundwork/task-info.yaml
@@ -51,6 +51,12 @@ files:
     \ \" +\n                    \"one for mines, one for safe zones.\");\n       \
     \ }\n        \n        return CheckResult.correct();\n    }\n}\n"
   learner_created: false
+- name: src/minesweeper/Minesweeper.java
+  visible: true
+  learner_created: true
 feedback_link: https://hyperskill.org/projects/77/stages/426/implement#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Tue, 02 Nov 2021 12:55:46 UTC
 record: -1
