--- a/Prepare for battle/task-info.yaml
+++ b/Prepare for battle/task-info.yaml
@@ -516,6 +516,124 @@ files:
         }
     }
   learner_created: false
+- name: src/minesweeper/Field.java
+  visible: true
+  text: |
+    package minesweeper;
+
+    import java.util.Random;
+
+    public class Field {
+        final int SIZE = 9;
+        final char UNKNOWN = '.';
+        final char MINE = 'X';
+
+        private Cell[][] cells;
+
+        public Field(int mines) {
+            cells = new Cell[SIZE][SIZE];
+
+            int numberOfMines = 0;
+            for (int i = 0; i < cells.length; i++) {
+                for (int j = 0; j < cells.length; j++) {
+                    cells[i][j] = new Cell();
+                }
+            }
+
+            while (numberOfMines < mines) {
+                Random random = new Random();
+                int row = random.nextInt(SIZE);
+                int col = random.nextInt(SIZE);
+                if (!cells[row][col].hasMine) {
+                    cells[row][col].hasMine = true;
+                    numberOfMines++;
+                }
+            }
+
+        }
+
+        public void printField() {
+            for (int i = 0; i < cells.length; i++) {
+                for (int j = 0; j < cells.length; j++) {
+                    int numberOfMines = countMines(i, j);
+                    if (numberOfMines == -1) {
+                        System.out.print(MINE);
+                    } else if (numberOfMines == 0) {
+                        System.out.print(UNKNOWN);
+                    } else {
+                        System.out.print(numberOfMines);
+                    }
+                }
+                System.out.println();
+            }
+        }
+
+        private int countMines(int row, int col) {
+            int result = 0;
+
+            if (cells[row][col].hasMine) {
+                return -1;
+            }
+            int up = 1;
+            int down = 1;
+            int left = 1;
+            int right = 1;
+
+            if (row == 0) {
+                up = 0;
+            }
+            if (row == cells.length - 1) {
+                down = 0;
+            }
+            if (col == 0) {
+                left = 0;
+            }
+            if (col == cells.length - 1) {
+                right = 0;
+            }
+
+            for (int i = row - up; i <= row + down; i++) {
+                for (int j = col - left; j <= col + right; j++) {
+                    if (cells[i][j].hasMine) {
+                        result++;
+                    }
+                }
+            }
+            return result;
+        }
+    }
+  learner_created: true
+- name: src/minesweeper/Cell.java
+  visible: true
+  text: |
+    package minesweeper;
+
+    public class Cell {
+        boolean hasMine = false;
+    }
+  learner_created: true
+- name: src/minesweeper/Game.java
+  visible: true
+  text: |
+    package minesweeper;
+
+    import java.util.Scanner;
+
+    public class Game {
+        Field field;
+        Scanner scanner = new Scanner(System.in);
+
+        public void start() {
+            System.out.println("How many mines do you want on the field? ");
+            int mines = scanner.nextInt();
+            field = new Field(mines);
+            field.printField();
+        }
+    }
+  learner_created: true
 feedback_link: https://hyperskill.org/projects/77/stages/429/implement#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Tue, 02 Nov 2021 13:44:21 UTC
 record: -1
