--- a/Battle_/task-info.yaml
+++ b/Battle_/task-info.yaml
@@ -714,6 +714,13 @@ files:
         }
     }
   learner_created: true
+- name: src/minesweeper/Result.java
+  visible: true
+  learner_created: true
 feedback_link: https://hyperskill.org/projects/77/stages/430/implement#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Well done! You've finished the project. Select a new project on <a href="https://hyperskill.org/projects">JetBrains
+    Academy</a> to continue learning.
+  time: Wed, 03 Nov 2021 15:37:11 UTC
 record: -1
